<resources>
    <string name="app_name">De Remate FE</string>

    <string name="registerTitle">Registro</string>
    <string name="registerName">Nombre</string>
    <string name="registerLastname">Apellido</string>
    <string name="registerPassword">Contraseña</string>
    <string name="registerEmail">Correo</string>
    <string name="registerBtn">Registrarse</string>
    <string name="registerLoginBtn">Ya tengo cuenta</string>

    <string name="verifyTitle">Confirmación</string>
    <string name="verifyContent">Te hemos enviado un correo electrónico con el código de confirmación para crear tu cuenta, por favor ingresa el código</string>
    <string name="verifyBtn">Reenviar código</string>
    <string name="verifyBtnClose">Cerrar sesión</string>

    <string name="loginTitle">Iniciar sesión</string>
    <string name="loginEmail">Correo</string>
    <string name="loginPassword">Contraseña</string>
    <string name="loginBtn">Ingresar</string>
    <string name="loginRegisterBtn">Crear una cuenta</string>
    <string name="forgotPwdBtn">Olvidé mi contraseña</string>
    <string name="package_code_format">Código: %1$d</string>




    <string name="error_generic">Ocurrió un error inesperado. Intente nuevamente.</string>
    <string name="error_loading_user_id">Error al verificar la información del usuario. Por favor, inicie sesión de nuevo.</string>
    <string name="no_deliveries_found">No se encontraron entregas.</string>

    <string name="error_invalid_user_id">ID de usuario inválido.</string>

    <string name="enterEmailPrompt">Ingresa tu correo electrónico asociado a la cuenta.</string>
    <string name="enterEmailSendCodeBtn">Enviar Código</string>
    <string name="enterEmailSendingCode">Enviando código...</string>
    <string name="enterEmailCodeSent">Se ha enviado un código de verificación a %s</string>
    <string name="enterEmailApiError">Error al solicitar código: %s</string>
    <string name="enterEmailNetworkError">Error de red al solicitar código.</string>
    <string name="enterEmailInvalid">Por favor, ingresa un correo válido.</string>
    <string name="forgotPasswordTitle">Restablecer Contraseña</string>
    <string name="enterCodePrompt">Ingresa el código de 4 caracteres enviado a %s y tu nueva contraseña.</string>
    <string name="enterCodeHint">Código de Verificación (4 caracteres)</string>
    <string name="enterCodeNewPasswordHint">Nueva Contraseña</string>
    <string name="enterCodeConfirmPasswordHint">Confirmar Nueva Contraseña</string>
    <string name="enterCodeConfirmBtn">Confirmar Nueva Contraseña</string>
    <string name="enterCodeResetting">Restableciendo contraseña...</string>
    <string name="enterCodeCodeRequired">El código es requerido.</string>
    <string name="enterCodePasswordRequired">La contraseña es requerida.</string>
    <string name="enterCodePasswordsMismatch">Las contraseñas no coinciden.</string>
    <string name="enterCodeInvalidCodeError">Código inválido o expirado.</string>
    <string name="enterCodeApiError">Error al restablecer: %s</string>
    <string name="enterCodeNetworkError">Error de red al restablecer.</string>
    <string name="resetPasswordSuccess">¡Contraseña actualizada correctamente!</string>
    <string name="resetPasswordTitle">Establecer Nueva Contraseña</string>
    <string name="resetPasswordInstructions">Ingresa el código de 4 caracteres enviado a tu correo y tu nueva contraseña.</string>
    <string name="resetPasswordCodeHint">Código de Verificación (4 caracteres)</string>
    <string name="resetPasswordNewPasswordHint">Nueva Contraseña</string>
    <string name="resetPasswordConfirmPasswordHint">Confirmar Nueva Contraseña</string>
    <string name="resetPasswordConfirmBtn">Confirmar Nueva Contraseña</string>
    <string name="resetPasswordConfirmBtn1">Confirmar Nueva Contraseña</string>


    <string name="validation_name_required">El nombre es requerido</string>
    <string name="validation_name_invalid">Nombre inválido (solo letras y espacios)</string>
    <string name="validation_lastname_required">El apellido es requerido</string>
    <string name="validation_lastname_invalid">Apellido inválido (solo letras y espacios)</string>
    <string name="validation_email_required">El correo es requerido</string>
    <string name="validation_email_invalid">Formato de correo inválido</string>
    <string name="validation_password_required">La contraseña es requerida</string>
    <string name="validation_password_length">La contraseña debe tener al menos 6 caracteres</string>

    <string name="validation_code_length">El código debe tener %1$d caracteres</string>
    <string name="validation_password_length_min">La contraseña debe tener al menos %1$d caracteres</string>
    <string name="validation_password_uppercase">La contraseña debe contener al menos una mayúscula</string>
    <string name="validation_password_digit">La contraseña debe contener al menos un número</string>

    <string name="error_unknown_response">Error desconocido (sin respuesta)</string>
    <string name="error_parsing_fallback">Error desconocido.</string>
    <string name="error_invalid_response">Respuesta de error inválida del servidor.</string>
    <string name="error_reading_response">No se pudo leer la respuesta de error.</string>


    <string name="package_id_format">Código del Paquete: %1$s</string>
    <string name="package_status_format">Estado de Entrega: %1$s</string>
    <string name="package_location_format">Ubicación en Depósito: %1$s</string>
    <string name="package_qrcode_format">Código QR: %1$s</string>
    <string name="package_pin_format">PIN de Verificación: %1$s</string>
    <string name="package_created_format">Fecha de Creación: %1$s</string>

    <string name="deliversTitle">Pedidos</string>
    <string name="homeTitle">Inicio</string>
    <string name="settingsTitle">Ajustes</string>
    <string name="profileTitle">Perfil</string>
    <string name="scannerTitle">Escanear</string>
    <string name="searchForAvailableRoutes">Buscar Paquetes Disponibles</string>
    <string name="selectOriginNeighborhood">Seleccionar codigo de paquete</string>
    <string name="selectDestinNeighborhood">Seleccionar ubicacion</string>
    <string name="searchBtn">Buscar</string>s
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="session_expired_message">Tu sesión ha expirado. Por favor, logueate denuevo.</string>

</resources>
