<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="35dp"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:text="@string/searchForAvailableRoutes"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"/>

    <Spinner
        android:id="@+id/spinner_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorSecondary"
        android:prompt="@string/selectOriginNeighborhood"/>

    <Spinner
        android:id="@+id/spinner_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectDestinNeighborhood"
        android:layout_marginTop="18dp"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/searchBtn" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/tv_no_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="No se encontraron rutas"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />
</LinearLayout>
